--- a/default.css
+++ b/default.css
@@ -77,7 +77,7 @@
 			form .submit
 			{
 				margin-top: 2em;
-				background: #B03500;
+				background: #044C29;
 				line-height: 1.5em;
 				font-size: 1.3em;
 			}
@@ -259,7 +259,7 @@
 		display: inline-block;
 		margin-top: 2em;
 		padding: 1em 2em 1em 2em;
-		background: #B03500;
+		background: #044C29;
 		letter-spacing: 0.20em;
 		line-height: 1.8em;
 		text-decoration: none;
@@ -295,7 +295,7 @@
 
 	.title
 	{
-		margin-bottom: 3em;
+		margin-bottom: 4em;
 	}
 	
 	.title h2
@@ -320,8 +320,8 @@
 	#header-wrapper
 	{
 		overflow: hidden;
-		padding: 5em 0em;
-		background: #B03500 url(images/overlay.png) repeat;
+		padding: 0em 0em;
+		background: #044C29 url(images/overlay.png) repeat;
 	}
 
 	#header
@@ -428,7 +428,7 @@
 
 	#wrapper1
 	{
-		background: #242424;
+		background: #00261C;
 	}
 
 	#wrapper2
@@ -440,14 +440,14 @@
 	{
 		overflow: hidden;
 		padding: 8em 0em;
-		background: #FFF;
+		background: #fff;
 	}
 	
 	#wrapper4
 	{
 		overflow: hidden;
 		padding: 8em 0em;
-		background: #939E77;
+		background: #00261C;
 	}
 
 /*********************************************************************************/
