--- a/default.css
+++ b/default.css
@@ -1,3 +1,6 @@
+	@media (max-width: 700px) {
+   /* PUT CSS HERE TO ALTER WEBSITE TO SINGLE COLUMN */
+}
 	html, body
 	{
 		height: 100%;
@@ -14,6 +17,7 @@
 		color: #000000;
 	}
 	
+
 	
 	h1, h2, h3
 	{
